cpp/build_make.log
[ 10%] Building CXX object CMakeFiles/core.dir/src/args.cpp.o
[ 10%] Building CXX object CMakeFiles/core.dir/src/folds.cpp.o
[ 20%] Building CXX object CMakeFiles/core.dir/src/tsv_reader.cpp.o
[ 20%] Building CXX object CMakeFiles/core.dir/src/hashing.cpp.o
[ 25%] Building CXX object CMakeFiles/core.dir/src/sparse_vec.cpp.o
[ 30%] Building CXX object CMakeFiles/core.dir/src/text_clean.cpp.o
[ 40%] Building CXX object CMakeFiles/core.dir/src/ngrams.cpp.o
[ 40%] Building CXX object CMakeFiles/core.dir/src/tokenizer.cpp.o
[ 45%] Building CXX object CMakeFiles/core.dir/src/metrics.cpp.o
[ 50%] Building CXX object CMakeFiles/core.dir/src/sgd_trainer.cpp.o
[ 60%] Building CXX object CMakeFiles/core.dir/src/model_io.cpp.o
[ 65%] Building CXX object CMakeFiles/core.dir/src/dataset.cpp.o
[ 55%] Building CXX object CMakeFiles/core.dir/src/logreg_model.cpp.o
[ 70%] Building CXX object CMakeFiles/core.dir/src/csv_write.cpp.o
[ 75%] Building CXX object CMakeFiles/core.dir/src/json_write.cpp.o
[ 80%] Linking CXX static library libcore.a
[ 80%] Built target core
[ 90%] Building CXX object CMakeFiles/train_cpp.dir/app/train_main.cpp.o
[ 90%] Building CXX object CMakeFiles/predict_cpp.dir/app/predict_main.cpp.o
/Users/aidancolvin/-sentiment-analysis-v3/cpp/app/train_main.cpp:18:3: error: unknown type name 'JsonWriter'
   18 |   JsonWriter jw(out_dir + "/checkpoint.json");
      |   ^
/Users/aidancolvin/-sentiment-analysis-v3/cpp/app/train_main.cpp:99:5: error: unknown type name 'JsonWriter'
   99 |     JsonWriter jw(out_dir + "/cv_metrics.json");
      |     ^
/Users/aidancolvin/-sentiment-analysis-v3/cpp/app/train_main.cpp:134:5: error: use of undeclared identifier 'save_model'
  134 |     save_model(out_dir + "/model.bin", model);
      |     ^
/Users/aidancolvin/-sentiment-analysis-v3/cpp/app/train_main.cpp:136:5: error: unknown type name 'JsonWriter'
  136 |     JsonWriter jw(out_dir + "/fit_metrics.json");
      |     ^
4 errors generated.
make[2]: *** [CMakeFiles/train_cpp.dir/app/train_main.cpp.o] Error 1
make[1]: *** [CMakeFiles/train_cpp.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 95%] Linking CXX executable predict_cpp
[ 95%] Built target predict_cpp
make: *** [all] Error 2
